@@ -1,0 +1,16 @@
+<h1>Editing apartamento</h1>
+
+<% form_for(@apartamento) do |f| %>
+  <%= f.error_messages %>
+
+  <p>
+    <%= f.label :num %><br />
+    <%= f.text_field :num %>
+  </p>
+  <p>
+    <%= f.submit "Update" %>
+  </p>
+<% end %>
+
+<%= link_to 'Show', @apartamento %> |
+<%= link_to 'Back', apartamentos_path %>
