@@ -1,0 +1,20 @@
+<h1>Listing apartamentos</h1>
+
+<table>
+  <tr>
+    <th>Num</th>
+  </tr>
+
+<% for apartamento in @apartamentos %>
+  <tr>
+    <td><%=h apartamento.num %></td>
+    <td><%= link_to 'Show', apartamento %></td>
+    <td><%= link_to 'Edit', edit_apartamento_path(apartamento) %></td>
+    <td><%= link_to 'Destroy', apartamento, :confirm => 'Are you sure?', :method => :delete %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'New apartamento', new_apartamento_path %>
