@@ -1,0 +1,8 @@
+<p>
+  <b>Num:</b>
+  <%=h @apartamento.num %>
+</p>
+
+
+<%= link_to 'Edit', edit_apartamento_path(@apartamento) %> |
+<%= link_to 'Back', apartamentos_path %>
